minor grammar change to ES6 and fix overflow bug

--- a/Website/public/src/styles/index.styl
+++ b/Website/public/src/styles/index.styl
@@ -333,7 +333,6 @@ a
   width 80%
   font-weight 300
   color #777
-  overflow scroll
   .prob
     float left
     background #fff
